--- a/cs_wpf_property_generator.csproj
+++ b/cs_wpf_property_generator.csproj
@@ -57,4 +57,8 @@
     <Folder Include="Examples\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
